Fix: video not aligned correctly left to right

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -479,7 +479,6 @@ p {
         padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
         position: relative;
         margin-inline: 60px;
-        width: 90%;
     }
 
     /*  Reduces spacing around resources list for larger screen viewing */
